--- a/Project file.ipynb
+++ b/Project file.ipynb
@@ -2835,19 +2835,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 590,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.35148514851485146\n"
-     ]
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=None, error_score='raise',\n",
+       "       estimator=SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "  decision_function_shape='ovr', degree=3, gamma='auto', kernel='rbf',\n",
+       "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+       "  tol=0.001, verbose=False),\n",
+       "       fit_params=None, iid=True, n_jobs=1,\n",
+       "       param_grid=[{'C': [1, 10, 100, 1000], 'kernel': ['linear']}, {'C': [1, 10, 100, 1000], 'gamma': [1, 0.1, 0.01, 0.001, 0.0001], 'kernel': ['rbf']}],\n",
+       "       pre_dispatch='2*n_jobs', refit=True, return_train_score='warn',\n",
+       "       scoring=None, verbose=0)"
+      ]
+     },
+     "execution_count": 590,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(score)"
+    "param_grid = [\n",
+    "    {'C': [1, 10, 100, 1000], 'kernel': ['linear']},\n",
+    "    {'C': [1, 10, 100, 1000], 'gamma': [1,0.1,0.01,0.001, 0.0001], 'kernel': ['rbf']},]\n",
+    "clf = GridSearchCV(SVC(),param_grid)\n",
+    "clf.fit(X_train, Y_train)"
    ]
   },
   {
